Fixed Today's Highlights section for mobile phone - decrease font sizes - adjusted widths and gaps

--- a/src/scss/_containers.scss
+++ b/src/scss/_containers.scss
@@ -92,7 +92,6 @@
 		&.wa-search-container .wa-weather-timeline-wrapper {
 			padding: 24px;
 			gap: 16px;
-			min-width: 190px;
 			flex-grow: 1;
 
 			.wa-date-wrapper .wa-title {
