--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -41,10 +41,10 @@ h2.heading {
 	}
 
 	.wa-value {
-		font-size: 40px;
+		font-size: 34px;
 
 		.wa-mesure-sign {
-			font-size: 18px;
+			font-size: 14px;
 		}
 	}
 }
