--- a/src/scss/components/_weather-highlight-card.scss
+++ b/src/scss/components/_weather-highlight-card.scss
@@ -8,8 +8,13 @@
 	overflow: hidden;
 }
 
-@media only screen and (max-width: $large-mobile) {
+@media (max-width: $large-mobile) {
 	.wa-card-wrapper {
 		background-color: $gray-light-1;
+		gap: 16px;
+
+		.heading {
+			font-size: 14px;
+		}
 	}
 }
