--- a/src/scss/components/_weather_highlights.scss
+++ b/src/scss/components/_weather_highlights.scss
@@ -4,14 +4,8 @@
 	gap: 1rem;
 }
 
-@media only screen and (max-width: $medium-laptop) {
+@media (max-width: $medium-laptop) {
 	.wa-cards-wrapper {
 		grid-template-columns: repeat(2, 1fr);
-	}
-}
-
-@media only screen and (max-width: $large-mobile) {
-	.wa-cards-wrapper {
-		grid-template-columns: repeat(1, 1fr);
 	}
 }
